# PPO-deep-reinforcement-learning

./: .gitignore  README.md  ppo.py  pyproject.toml
runs/ppo/CartPole-v1_1_1695123341/: events.out.tfevents.1695123341.DESKTOP-2P1BI2D.12488.0
runs/ppo/CartPole-v1_1_1695123472/: events.out.tfevents.1695123472.DESKTOP-2P1BI2D.30464.0
runs/ppo/CartPole-v1_1_1695123510/: events.out.tfevents.1695123510.DESKTOP-2P1BI2D.17328.0
runs/ppo/CartPole-v1_1_1695124162/: events.out.tfevents.1695124169.DESKTOP-2P1BI2D.27324.0
runs/ppo/CartPole-v1_1_1695283295/: events.out.tfevents.1695283295.DESKTOP-2P1BI2D.9472.0
wandb/run-20230919_124928-u2x63wrx/: run-u2x63wrx.wandb
wandb/run-20230919_124928-u2x63wrx/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20230919_124928-u2x63wrx/files/code/: ppo.py
